cmake_minimum_required(VERSION 2.8)
project(testApp C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Boost 1.65 REQUIRED COMPONENTS thread program_options)
include_directories(${Boost_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps -fverbose-asm -std=c++17")
link_libraries(pthread ${Boost_LIBRARIES})
add_executable(${PROJECT_NAME} "main.cpp")

